RESOLVED FIXED288548
[JSC] Optimize Array.prototype.indexOf for Dense Atom String Arrays
https://bugs.webkit.org/show_bug.cgi?id=288548
Summary [JSC] Optimize Array.prototype.indexOf for Dense Atom String Arrays
Yijia Huang
Reported 2025-02-25 16:28:48 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-25 16:28:59 PST
Yijia Huang
Comment 2 2025-02-25 16:50:21 PST
Yijia Huang
Comment 3 2025-02-26 22:10:15 PST
EWS
Comment 4 2025-02-28 16:28:53 PST
Committed 291398@main (e1b94476e4f0): <https://commits.webkit.org/291398@main> Reviewed commits have been landed. Closing PR #41349 and removing active labels.
Fujii Hironori
Comment 5 2025-03-01 16:17:59 PST
Regressed: Bug 288931 – REGRESSION(291398@main): ASSERTION FAILED: expected.asNumber() == result.asNumber() in JSC::EncodedJSValue JSC::arrayProtoFuncIndexOf(JSGlobalObject *, CallFrame *)
Note You need to log in before you can comment on or make changes to this bug.